[project]
name = "monsoon-relief-openenv"
version = "1.0.0"
description = "A real-world RL environment where an AI acts as a disaster-response operations officer during a monsoon flood emergency."
readme = "README.md"
authors = [
    { name = "AI Engineer" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
